--- a/adopt-me/.eslintrc.json
+++ b/adopt-me/.eslintrc.json
@@ -1,19 +1,17 @@
 {
-    "extends": [
-        "eslint:recommended", 
-        "prettier" 
-    ],
+    "extends": ["eslint:recommended", "prettier"],
     "plugins": [],
     "parserOptions": {
-        "ecmaVersion": 2022,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
+      "ecmaVersion": 2022,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
     },
-    "Env": {
-        "es6": true,
-        "browser": true,
-        "node": true
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true
     }
-}
+  }
+  
